# carrymath-py

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: tests.yml
carrymath/: __init__.py  carry.py  covariance.py  digits.py  entropy.py  enumerate.py  matrix.py  number_theory.py  primes.py
examples/: basic_carry_chain.py  covariance_verification.py  entropy_profile.py  spectral_analysis.py
tests/: test_carry.py  test_comprehensive.py  test_cross_validation.py  test_shared_vectors.py
tests/data/: test_vectors.json
